--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,11 @@
       src="https://kit.fontawesome.com/086bf8b4f8.js"
       crossorigin="anonymous"
     ></script>
+    <!-- Responsive-Carousel  -->
+    <link
+      rel="stylesheet"
+      href="<NODE_MODULES_FOLDER>/react-responsive-carousel/lib/styles/carousel.min.css"
+    />
     <title>Avishek Ataur</title>
   </head>
   <body>
